--- a/_config.yml
+++ b/_config.yml
@@ -84,3 +84,8 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
+title: Henrim.GitHub.io
+google_analytics: 
+show_downloads: true
+theme: jekyll-theme-cayman
