simplify to test build

--- a/_config-org.yml
+++ b/_config-org.yml
@@ -6,7 +6,7 @@
 name: Henri Merkesdal
 
 # Short bio or description (displayed in the header)
-description: Software Architect and Developer from Norway
+description: Web Developer from Norway
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://secure.gravatar.com/avatar/3278b157d0ec26023ade21093613473e
@@ -72,6 +72,10 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
+# Use the following plug-ins
+gems:
+  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
 # Exclude these files from your production _site
 exclude:
