fixed building jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,7 @@ url:
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
+repository: "henrim/henrim.github.io"
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -67,10 +68,20 @@ kramdown:
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
     css_class: 'highlight'
+    span:
+        line_numbers: false
+    block:
+        line_numbers: true
+
 
 # Set the Sass partials directory, as we're using @imports
 sass:
   style: :expanded # You might prefer to minify using :compressed
+
+# Use the following plug-ins
+plugins:
+  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
 
 # Exclude these files from your production _site
