--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ url:
 baseurl: ""
 repository: "henrim/henrim.github.io"
 
+highlighter: rouge
 #
 # !! You don't need to change any of the configuration flags below !!
 #
@@ -60,25 +61,27 @@ permalink: /:title/
 version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
+#kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
+  #input: GFM
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
+  #syntax_highlighter: rouge
+  #syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
-    span:
-        line_numbers: false
-    block:
-        line_numbers: true
+  #  css_class: 'highlight'
+    #span:
+    #    line_numbers: false
+    #block:
+    #    line_numbers: true
 
 
 # Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
+#sass:
+#  style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
+markdown: kramdown
+theme: minima
 plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
